--- a/src/main/resources/templates/houses/index.html
+++ b/src/main/resources/templates/houses/index.html
@@ -209,26 +209,7 @@
                                         </li>
                                         <li class="page-item">                        
                                             <span th:if="${housePage.isLast()}" class="page-link disabled">次</span>
- 											<a th:unless="${housePage.isLast()}" th:href="@{/houses(page = ${housePage.getNumber() + 1}, keyword = ${keyword}, area = ${area}, price = ${price}, order = ${order})}" class="page-link samuraitravel-page-link">次</a>                                        </li>
-                                    </ul>
-                                </nav> 
-                            </div>                                      
-                        </div>
-                    </div>
-                </div>  
-            </main>
-            
-            <!-- フッター -->
-            <div th:replace="~{fragment :: footer}"></div>
-        </div>    
-        
-        <div th:replace="~{fragment :: scripts}"></div>  
-  </body>
-</html>
-                                         </li>
-                                         <li class="page-item">                        
-                                             <span th:if="${housePage.isLast()}" class="page-link disabled">次</span>
-                                             <a th:unless="${housePage.isLast()}" th:href="@{/houses(page = ${housePage.getNumber() + 1}, keyword = ${keyword}, area = ${area}, price = ${price})}" class="page-link samuraitravel-page-link">次</a>
+ 											<a th:unless="${housePage.isLast()}" th:href="@{/houses(page = ${housePage.getNumber() + 1}, keyword = ${keyword}, area = ${area}, price = ${price}, order = ${order})}" class="page-link samuraitravel-page-link">次</a>                                        
                                          </li>
                                      </ul>
                                  </nav> 
